--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: mvn clean verify
+script: mvn clean verify -Dgpg.skip=true
 after_success:
     - mvn clean test
     - mvn jacoco:report
