--- a/joojava-dependencies/pom.xml
+++ b/joojava-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>joojava-parent</artifactId>
         <groupId>io.github.leegive</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
