--- a/joojava-framework/pom.xml
+++ b/joojava-framework/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>joojava-dependencies</artifactId>
         <groupId>io.github.leegive</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
         <relativePath>../joojava-dependencies/pom.xml</relativePath>
     </parent>
 
