--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>io.github.leegive</groupId>
     <artifactId>joojava-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1.RELEASE</version>
     <packaging>pom</packaging>
 
     <name>joojava-parent</name>
@@ -43,7 +43,7 @@
         <!-- Framework properties -->
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
-        <joojava-framework.version>0.0.1-SNAPSHOT</joojava-framework.version>
+        <joojava-framework.version>0.0.1.RELEASE</joojava-framework.version>
 
         <!-- Build properties -->
         <java.version>1.8</java.version>
